fix for format wrapping too easily

--- a/src/css/components.css
+++ b/src/css/components.css
@@ -119,7 +119,7 @@ textarea {
 .text-area {
     padding: 8px;
     margin: 0;
-    flex: 1;
+    flex-grow: 1;
     word-break: break-word;
     white-space: normal;
     user-select: text;
